{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 23,
  "lineage": "bccf6905-3351-64e0-300c-563ae7543011",
  "resources": [
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkInterfaces/devVM1-nic",
            "internal_domain_name_suffix": "ppy0vhps4cmene2i0rblh4zrtg.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "westus",
            "name": "devVM1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "MyResourceGroup03"
          },
          "dependencies": [
            "module.dev.azurerm_public_ip.pip",
            "module.dev.azurerm_resource_group.rg",
            "module.dev.azurerm_subnet.subnet",
            "module.dev.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkInterfaces/devVM2-nic",
            "internal_domain_name_suffix": "ppy0vhps4cmene2i0rblh4zrtg.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/publicIPAddresses/devIP",
                "subnet_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "westus",
            "name": "devVM2-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "MyResourceGroup03"
          },
          "dependencies": [
            "module.dev.azurerm_public_ip.pip",
            "module.dev.azurerm_resource_group.rg",
            "module.dev.azurerm_subnet.subnet",
            "module.dev.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkInterfaces/devVM1-nic|/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "network_interface_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkInterfaces/devVM1-nic",
            "network_security_group_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkSecurityGroups/myNSG"
          },
          "dependencies": [
            "module.dev.azurerm_network_interface.nic",
            "module.dev.azurerm_network_security_group.nsg",
            "module.dev.azurerm_public_ip.pip",
            "module.dev.azurerm_resource_group.rg",
            "module.dev.azurerm_subnet.subnet",
            "module.dev.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkInterfaces/devVM2-nic|/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "network_interface_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkInterfaces/devVM2-nic",
            "network_security_group_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkSecurityGroups/myNSG"
          },
          "dependencies": [
            "module.dev.azurerm_network_interface.nic",
            "module.dev.azurerm_network_security_group.nsg",
            "module.dev.azurerm_public_ip.pip",
            "module.dev.azurerm_resource_group.rg",
            "module.dev.azurerm_subnet.subnet",
            "module.dev.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "location": "westus",
            "name": "myNSG",
            "resource_group_name": "MyResourceGroup03",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "My-nsg",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/publicIPAddresses/devIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "devIP",
            "resource_group_name": "MyResourceGroup03",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.dev.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "name": "mySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MyResourceGroup03",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "module.dev.azurerm_resource_group.rg",
            "module.dev.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "module.dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9daaf17b-f0f2-4698-9388-d442b3fb319e",
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup03/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "westus",
            "name": "myVnet",
            "resource_group_name": "MyResourceGroup03"
          },
          "dependencies": [
            "module.dev.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkInterfaces/PRODVM1-nic",
            "internal_domain_name_suffix": "encrsnli35tepfq4tef3orb0ke.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "westus",
            "name": "PRODVM1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "MyResourceGroup02"
          },
          "dependencies": [
            "module.prod.azurerm_public_ip.pip",
            "module.prod.azurerm_resource_group.rg",
            "module.prod.azurerm_subnet.subnet",
            "module.prod.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkInterfaces/PRODVM2-nic",
            "internal_domain_name_suffix": "encrsnli35tepfq4tef3orb0ke.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/publicIPAddresses/ProdIP",
                "subnet_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "westus",
            "name": "PRODVM2-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "MyResourceGroup02"
          },
          "dependencies": [
            "module.prod.azurerm_public_ip.pip",
            "module.prod.azurerm_resource_group.rg",
            "module.prod.azurerm_subnet.subnet",
            "module.prod.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkInterfaces/PRODVM1-nic|/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "network_interface_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkInterfaces/PRODVM1-nic",
            "network_security_group_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkSecurityGroups/myNSG"
          },
          "dependencies": [
            "module.prod.azurerm_network_interface.nic",
            "module.prod.azurerm_network_security_group.nsg",
            "module.prod.azurerm_public_ip.pip",
            "module.prod.azurerm_resource_group.rg",
            "module.prod.azurerm_subnet.subnet",
            "module.prod.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkInterfaces/PRODVM2-nic|/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "network_interface_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkInterfaces/PRODVM2-nic",
            "network_security_group_id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkSecurityGroups/myNSG"
          },
          "dependencies": [
            "module.prod.azurerm_network_interface.nic",
            "module.prod.azurerm_network_security_group.nsg",
            "module.prod.azurerm_public_ip.pip",
            "module.prod.azurerm_resource_group.rg",
            "module.prod.azurerm_subnet.subnet",
            "module.prod.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "location": "westus",
            "name": "myNSG",
            "resource_group_name": "MyResourceGroup02",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "My-nsg",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/publicIPAddresses/ProdIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "ProdIP",
            "resource_group_name": "MyResourceGroup02",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.prod.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "name": "mySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MyResourceGroup02",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "module.prod.azurerm_resource_group.rg",
            "module.prod.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "module.prod.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "35194523-ef68-47e6-961e-990bd7443a54",
            "id": "/subscriptions/cdca4869-eaa9-41c0-9cf5-9b9b5a8b417f/resourceGroups/MyResourceGroup02/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "westus",
            "name": "myVnet",
            "resource_group_name": "MyResourceGroup02"
          },
          "dependencies": [
            "module.prod.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}